# job-seek-v3

./: .gitignore  job_library.py  job_predict_model.ipynb  job_predict_model_beta7v3b.ipynb  job_predict_model_v2.ipynb  job_predict_model_v3.ipynb  job_predict_model_v3b.ipynb  makefile  pyproject.toml  stage_1_get_jobs.py  stage_2_process_survey.py  stage_3_prediction.py
app/: service_prediction_main.py  service_user_management_main.py  tool_gen_dbo.py
app/libs/database/: __init__.py
app/libs/database/model/: __init__.py  _base.py  company_detail_model.py  job_model.py  preference_keyword_model.py  survey_job_preference_model.py  survey_job_question_model.py  user_account_model.py  (+2 more)
app/libs/job_search_svc_client/: job_search.py
app/libs/protos/: job-apply.proto  job-search.proto  prediction.proto  user-management.proto
app/libs/sample/: job_pairs.json
app/libs/twirp_protos/: job-search_twirp.py  job_apply_pb2.py  job_apply_twirp.py  job_search_pb2.py  prediction_pb2.py  prediction_twirp.py  user_management_pb2.py  user_management_twirp.py
app/services/: __init__.py
app/services/service_prediction/: main.py  service.py  subprocess.py  survey_user_perfence.py
app/services/service_user_management/: main.py  service.py  utils.py
snapshot/: clipboard.ts  deno.json  display_job_set.json  display_ranked_jobs.json  display_seek_job_rank_jobs.json  job_preference_df.csv  job_preference_df.parquet  job_preference_df_for_xgboost.csv  job_preference_df_for_xgboost.parquet  job_preference_df_stage2.parquet  jobs_fetch_from_seek.csv  jobs_fetch_from_seek.json  jobs_fetch_from_seek.parquet  pairs_list.json  ranked_jobs_dec.parquet  ranking_model.ubj  ranking_model_decision_tree_classifier.joblib  related_jobs.json  seek_job_df_for_xgboost.parquet  seek_job_preference_df_stage2.parquet  user_account.json  user_profile.json
(+11 files in other folders)
