[project]
name = "job-seek-v3"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Steven CHM", email = "stv.chm@gmail.com" }]
requires-python = ">= 3.11"
dependencies = [
  "surrealdb",
  "grpcio",
  "grpcio-tools",
  "numpy",
  "pandas",
  "transformers",
  "torch",
  "betterproto[compiler]>=2.0.0b6",
  "grpclib",
  "quart", "quart-cors",
  "flask[async]", "flask-cors",
  "sonora",
  "twirp", "uvicorn","fastapi"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge", "nvidia", "pytorch"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
job_seek_v3 = { path = ".", editable = true }

[tool.pixi.tasks]
run-pred-svc = "python app/service_prediction_main.py"
run-user-svc = "python app/service_user_management_main.py"
run-twirp = "python app/service_prediction_main.py"
generate-grpc = "python -m grpc_tools.protoc -I=app/libs/protos --python_betterproto_out=app/libs/protos app/libs/protos/*.proto"
generate-twirp = "python -m grpc_tools.protoc -I=app/libs/protos --python_out=app/libs/twirp_protos --twirpy_out=app/libs/twirp_protos app/libs/protos/*.proto"
generate-grpc-old = "python -m grpc_tools.protoc -I=app/libs/protos --python_out=app/libs/protos --grpc_python_out=app/libs/protos app/libs/protos/*.proto"

gen-dbo = "python app/tool_gen_dbo.py"

[tool.pixi.dependencies]
pytorch = ">=2.3.1,<3"
transformers = ">=4.41.2,<5"
grpcio-tools = ">=1.62.2,<2"
grpcio = ">=1.62.2,<2"
numpy = ">=2.0.1,<3"
pandas = ">=2.2.2,<3"
ipykernel = ">=6.29.5,<7"
xgboost = ">=2.1.1,<3"
python-dotenv = ">=1.0.1,<2"
protobuf = ">=4.25.3,<5"
peewee = ">=3.17.6,<4"
alembic = ">=1.13.3,<2"
psycopg2 = ">=2.9.9,<3"
